2001-03-08  Mikael Djurfeldt  <mdj@linnaeus.mit.edu>

	* ramap.c (racp): Removed optimization which caused array copying
	to fail if the two arrays shared storage.  Re-inserted the IVDEP
	macros removed in the change of 2000-03-09.  (Don't really have a
	complete grasp of what they are for, but they seem to be necessary
	on Crays.  This needs testing!)  Thanks to Miroslav Silovic.

	* hash.c (scm_string_hash): Don't downcase characters.

2001-03-07  Mikael Djurfeldt  <mdj@linnaeus.mit.edu>

	* symbols.c (scm_symbols_prehistory): Changed symbol hash table
	size from 277 --> 1009.

	* symbols.c, symbols.h (scm_sys_symbols): New function GUILE_DEBUG
	function.

	* coop-threads.c: Fixed change of 2001-03-06.
	
	* validate.h: Code formatting.

2001-03-07  Keisuke Nishida  <kxn30@po.cwru.edu>

	* Makefile.am (*.x): Add dependency on snarf.h and guile-doc-snarf.in.
	(*.doc): Add dependency on guile-snarf.awk.in.

	* guile-snarf.awk.in: Neglect spaces at the end of
	SCM_SNARF_DOCSTRING_END.  Skip lines "# NN ..." in the
	middle of docstrings.  (To avoid the problem with gcc-2.96.)

2001-03-06  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* coop-threads.c (scm_call_with_new_thread), load.c
	(scm_primitive_load, scm_sys_search_load_path), random.c
	(scm_c_default_rstate), struct.c (scm_make_struct_layout,
	scm_struct_ref, scm_struct_set_x):  Don't use SCM_ASSERT to
	(potentially) issue a scm-misc-error or wrong-num-args error
	message.

	* load.c (scm_search_path):  Use SCM_ASSERT_TYPE to give details
	about the expected type with the wrong-type-arg error message.

	* smob.c (scm_make_smob):  Abort on misuse of smob - it indicates
	a C level bug that can't be fixed from scheme anyway.

2001-03-05  Mikael Djurfeldt  <mdj@linnaeus.mit.edu>

	* eval.c (scm_m_letstar): Removed check for duplicate bindings.
	Duplicate bindings are OK in a let* since a let* is semantically
	equivalent to a nested set of let:s.

2001-03-05  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>
